starting android impl

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-	"nativescript": {
-		"id": "org.nativescript.bluetoothdemo",
-		"tns-android": {
-			"version": "1.5.1"
-		},
-		"tns-ios": {
-			"version": "1.5.2"
-		}
-	},
-	"dependencies": {
-		"nativescript-bluetooth": "file:../nativescript-bluetooth",
-		"tns-core-modules": "1.5.1"
-	}
+  "nativescript": {
+    "id": "org.nativescript.bluetoothdemo",
+    "tns-android": {
+      "version": "1.5.1"
+    },
+    "tns-ios": {
+      "version": "1.5.2"
+    }
+  },
+  "dependencies": {
+    "nativescript-bluetooth": "file:../nativescript-bluetooth",
+    "tns-core-modules": "1.5.1"
+  },
+  "devDependencies": {
+    "nativescript-dev-typescript": "^0.2.3",
+    "typescript": "^1.7.5"
+  }
 }
