--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		}
 	},
 	"dependencies": {
-		"nativescript-bluetooth": "file:../nativescript-bluetooth",
+		"nativescript-bluetooth": "https://github.com/EddyVerbruggen/nativescript-bluetooth.git",
 		"tns-core-modules": "^1.6.0"
 	},
 	"devDependencies": {
