Telerik Platform compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-.idea
-platforms
-node_modules
-lib
-tmp
-tsc-i386
+*/bin
+*/obj
+*.user-settings.xml
+Bluetooth/node_modules
+Bluetooth/platforms
+Bluetooth/lib
+Bluetooth/hooks
