--- a/Bluetooth/package.json
+++ b/Bluetooth/package.json
@@ -1,19 +1,23 @@
 {
-    "nativescript": {
-        "id": "org.nativescript.bluetoothdemo",
-        "tns-ios": {
-            "version": "1.7.0"
-        },
-        "tns-android": {
-            "version": "1.7.1"
-        }
+  "nativescript": {
+    "id": "org.nativescript.bluetoothdemo",
+    "tns-android": {
+      "version": "2.4.1"
     },
-    "dependencies": {
-        "nativescript-bluetooth": "1.1.2",
-        "tns-core-modules": "2.2.0"
-    },
-    "devDependencies": {
-        "nativescript-dev-typescript": "^0.3.1",
-        "typescript": "^1.8.2"
+    "tns-ios": {
+      "version": "2.4.0"
     }
+  },
+  "dependencies": {
+    "nativescript-bluetooth": "1.1.3",
+    "tns-core-modules": "^2.4.0"
+  },
+  "devDependencies": {
+    "babel-traverse": "6.19.0",
+    "babel-types": "6.19.0",
+    "babylon": "6.14.1",
+    "lazy": "1.0.11",
+    "nativescript-dev-typescript": "^0.3.1",
+    "typescript": "^1.8.2"
+  }
 }
