--- a/Bluetooth/package.json
+++ b/Bluetooth/package.json
@@ -1,23 +1,25 @@
 {
   "nativescript": {
     "id": "org.nativescript.bluetoothdemo",
-    "tns-android": {
-      "version": "2.5.0"
-    },
     "tns-ios": {
-      "version": "2.5.0"
+      "version": "3.1.0"
+    },
+    "tns-android": {
+      "version": "3.1.1"
     }
   },
   "dependencies": {
-    "nativescript-bluetooth": "1.1.5",
-    "tns-core-modules": "^2.5.1"
+    "nativescript-bluetooth": "file:///Users/eddyverbruggen/sandboxes/nativescript-bluetooth",
+    "tns-core-modules": "^3.1.0"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
     "babel-types": "6.11.1",
     "babylon": "6.8.4",
+    "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.3.7",
-    "typescript": "^2.1.0"
+    "nativescript-dev-typescript": "^0.5.0",
+    "tns-platform-declarations": "^3.1.1",
+    "typescript": "~2.3.0"
   }
 }
