--- a/Bluetooth/package.json
+++ b/Bluetooth/package.json
@@ -2,15 +2,15 @@
   "nativescript": {
     "id": "org.nativescript.bluetoothdemo",
     "tns-android": {
-      "version": "3.3.0"
+      "version": "3.4.1"
     },
     "tns-ios": {
-      "version": "3.3.0"
+      "version": "3.4.1"
     }
   },
   "dependencies": {
-    "nativescript-bluetooth": "~1.3.0",
-    "tns-core-modules": "^3.3.0"
+    "nativescript-bluetooth": "^1.3.1",
+    "tns-core-modules": "~3.4.0"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
@@ -18,8 +18,8 @@
     "babylon": "6.8.4",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.5.0",
-    "tns-platform-declarations": "^3.3.0",
-    "typescript": "~2.4.0"
+    "nativescript-dev-typescript": "^0.6.0",
+    "tns-platform-declarations": "~3.4.0",
+    "typescript": "~2.6.0"
   }
 }
